@@ -1,7 +1,7 @@
 Version 5.5 (?? 2014)
   * Improved documentation for croston()
-  * Added stlm() and forecast.stlm() functions, and added forecastfunction as a way of specifying
-    a forecast method in stlf() and forecast.stl().
+  * Added stlm() and forecast.stlm() functions, and added forecastfunction argument as a way of
+    specifying a forecast method in stlf() and forecast.stl().
   * Improved forecast.ar() so that it is more likely to work if ar() and forecast.ar() are
     embedded within other functions.
   * Improved handling of ARIMA models with seasonality greater than 48
@@ -11,6 +11,7 @@ Version 5.5 (?? 2014)
 	* Added a new argument find.frequency to forecast.ts().
 	* Added new arguments d and D to accuracy() for MASE.
   * Corrected bugs in accuracy().
+  * Better handling of regression models with perfect fit in auto.arima().
 
 Version 5.4 (8 May 2014)
   * Fixed bug in forecast.tbats() and forecast.bats() when ts.frequency does not match seasonal.periods.
